AC_PREREQ([2.68])
define([MY_NAME], [hello])
define([MY_MAJOR_VERSION], [1])
define([MY_MINOR_VERSION], [0])
define([MY_VERSION], MY_MAJOR_VERSION.MY_MINOR_VERSION)
define([MY_EMAIL], [adb1413@rit.edu])
AC_INIT(MY_NAME, MY_VERSION, MY_EMAIL)
AC_CONFIG_SRCDIR([src/hello-world.c])
AC_CONFIG_HEADERS([config.h])
AC_CANONICAL_HOST

# Additional version information
AC_SUBST([PACKAGE_MAJOR_VERSION], MY_MAJOR_VERSION)
AC_SUBST([PACKAGE_MINOR_VERSION], MY_MINOR_VERSION)
echo $PACKAGE_MAJOR_VERSION
echo $PACKAGE_MINOR_VERSION

# Checks for programs
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

# Checks for headers
AC_CHECK_HEADERS([stdlib.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
